--- a/_config.yml
+++ b/_config.yml
@@ -21,11 +21,11 @@
 title: Edith Zink
 email: ezi.zink@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Applied microeconomist working at the intersection of development 
+  economics, political economics, and economic history, interested in how
+  cultural and institutional change interact with economic outcomes.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://zined.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: zink_ed
 github_username:  zinked
 
