--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Applied microeconomist working at the intersection of development 
   economics, political economics, and economic history, interested in how
   cultural and institutional change interact with economic outcomes.
-baseurl: "https://zinked.github.io" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://zinked.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: zink_ed
 github_username:  zinked
