--- a/_config.yml
+++ b/_config.yml
@@ -18,12 +18,10 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Edith Zink
+title: EZ
 email: ezi.zink@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Applied microeconomist working at the intersection of development 
-  economics, political economics, and economic history, interested in how
-  cultural and institutional change interact with economic outcomes.
+  PhD Candidate at University of Copenhagen
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://zinked.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: zink_ed
