--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Post-Doc at University of Copenhagen
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://zinked.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: zink_ed
+# twitter_username: zink_ed
 github_username:  zinked
 
 # Build settings
